syntax = "proto3";

package services.user.v1;

service User {
    rpc Auth(AuthRequest) returns (AuthResponse);
    rpc getUser(GetUserRequest) returns (GetUserResponse);
}

message AuthRequest {
    string token = 1;
}

message AuthResponse {
    string uuid = 1;
    string username = 2;
    string role = 3;
}

message GetUserRequest {
    string uuid = 1;
}

message GetUserResponse {
    string uuid = 1;
    string username = 2;
    string email = 3;
    string role = 4;
}